--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "currency-formatter": "^1.2.1",
     "datatables.net": "^1.10.15",
     "datatables.net-dt": "^1.10.15",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
-    "react-bootstrap-table": "^3.3.7",
+    "react-bootstrap-table": "^3.3.8",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.2.0",
+    "redux": "^3.7.0",
+    "redux-form": "^6.8.0",
+    "redux-thunk": "^2.2.0",
+    "validator": "^7.1.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
@@ -19,5 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3090"
 }
