--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "datatables.net": "^1.10.15",
     "datatables.net-dt": "^1.10.15",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-bootstrap-table": "^3.3.8",
     "react-dom": "^15.5.4",
+    "react-lazy-load": "^3.0.12",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-transition-group": "^1.2.0",
